[gd_scene load_steps=9 format=3 uid="uid://d2si5priq2lj0"]

[ext_resource type="Script" path="res://Scene/GameBoard.gd" id="1_btlv5"]
[ext_resource type="Texture2D" uid="uid://b8gxcs3y2tdqx" path="res://Assets/Backgrounds/backgroundEmpty.png" id="2_0edkm"]
[ext_resource type="PackedScene" uid="uid://d24vgpfne4myn" path="res://Scene/hand.tscn" id="3_yapqd"]
[ext_resource type="PackedScene" uid="uid://dq57jfwop740s" path="res://Scene/battlefield.tscn" id="4_acoy2"]
[ext_resource type="PackedScene" uid="uid://sy6jvswk1c3i" path="res://Scene/end_turn_button.tscn" id="4_x53nr"]
[ext_resource type="PackedScene" uid="uid://cf1km83ige2fb" path="res://Scene/player_hp.tscn" id="5_o8y45"]
[ext_resource type="PackedScene" uid="uid://bge446lekidpc" path="res://Scene/deck.tscn" id="7_l0xe2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlodb"]
size = Vector2(1702.68, 647.5)

[node name="Battle" type="Node2D"]
script = ExtResource("1_btlv5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(984, 416)
scale = Vector2(2, 2)
texture = ExtResource("2_0edkm")

[node name="CanvasLayer" type="CanvasLayer" parent="." groups=["ui_layer"]]

[node name="Hand" parent="CanvasLayer" instance=ExtResource("3_yapqd")]
offset_top = 832.0
offset_right = 1666.0
offset_bottom = 1082.0

[node name="EndTurnButton" parent="CanvasLayer" instance=ExtResource("4_x53nr")]
offset_left = 1709.0
offset_top = 383.0
offset_right = -11.0
offset_bottom = -497.0

[node name="PlayerHp" parent="CanvasLayer" instance=ExtResource("5_o8y45")]
offset_left = 850.0
offset_right = -976.0
offset_bottom = -1010.0
mouse_filter = 2

[node name="Battlefield" parent="CanvasLayer" groups=["battlefield_layer"] instance=ExtResource("4_acoy2")]
offset_top = 383.0
offset_right = 1920.0
offset_bottom = 633.0
mouse_filter = 2

[node name="CardDropArea" type="Area2D" parent="."]
position = Vector2(577, 383)
scale = Vector2(1.12793, 1)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(342.885, -57.75)
shape = SubResource("RectangleShape2D_tlodb")

[node name="Deck" parent="." instance=ExtResource("7_l0xe2")]
offset_left = 1709.0
offset_top = 858.0
offset_right = 1709.0
offset_bottom = 858.0

[connection signal="gui_input" from="Deck" to="." method="_on_deck_gui_input"]
